--- a/dashboard.html
+++ b/dashboard.html
@@ -147,7 +147,7 @@
   .assign-select {
     flex: 1; padding: 9px 12px; border: 1px solid var(--border); border-radius: 4px;
     font-family: 'DM Sans', sans-serif; font-size: 13px; background: var(--white);
-    -webkit-appearance: none; cursor: pointer;
+    -webkit-appearance: none; appearance: none; cursor: pointer;
   }
   .assign-select:focus { outline: none; border-color: var(--rust); }
   .assign-btn { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; padding: 9px 18px; background: var(--ink); color: white; border: none; border-radius: 4px; cursor: pointer; white-space: nowrap; transition: background 0.18s; }
