--- a/approval.html
+++ b/approval.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Approvals — QIU Digital Communications</title>
-<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root {
     --ink: #0f0e0d; --paper: #f5f2ee; --white: #fff;
@@ -15,10 +15,10 @@
     --indigo: #3730a3; --indigo-light: #eef2ff;
   }
   * { box-sizing: border-box; margin: 0; padding: 0; }
-  body { font-family: 'DM Sans', sans-serif; background: var(--paper); color: var(--ink); }
+  body { font-family: 'Poppins', sans-serif; background: var(--paper); color: var(--ink); }
 
   .topband { background: var(--ink); color: var(--paper); padding: 0 40px; display: flex; align-items: center; justify-content: space-between; height: 56px; position: sticky; top: 0; z-index: 20; }
-  .brand { font-family: 'Syne', sans-serif; font-weight: 800; font-size: 13px; letter-spacing: 0.12em; text-transform: uppercase; }
+  .brand { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 13px; letter-spacing: 0.12em; text-transform: uppercase; }
   .brand span { color: var(--gold); }
   nav { display: flex; gap: 2px; }
   nav a { color: rgba(255,255,255,0.55); text-decoration: none; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; padding: 7px 13px; border-radius: 3px; transition: all 0.18s; }
@@ -29,7 +29,7 @@
 
   .page-header { padding: 44px 40px 36px; background: #1e3a2a; color: var(--paper); }
   .page-header .tag { font-size: 11px; font-weight: 500; letter-spacing: 0.15em; text-transform: uppercase; color: #7dd4a8; border: 1px solid rgba(125,212,168,0.35); padding: 4px 12px; border-radius: 2px; margin-bottom: 16px; display: inline-block; }
-  .page-header h1 { font-family: 'Syne', sans-serif; font-weight: 800; font-size: clamp(22px,3vw,32px); margin-bottom: 8px; }
+  .page-header h1 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: clamp(22px,3vw,32px); margin-bottom: 8px; }
   .page-header p { font-size: 14px; opacity: 0.6; font-weight: 300; }
 
   .page-body { max-width: 900px; margin: 0 auto; padding: 32px 40px 80px; }
@@ -42,7 +42,7 @@
   .req-card:hover { box-shadow: 0 4px 18px rgba(0,0,0,0.06); }
 
   .req-header { display: flex; align-items: center; gap: 16px; padding: 18px 22px; cursor: pointer; }
-  .ref-tag { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 12px; color: var(--rust); white-space: nowrap; }
+  .ref-tag { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 12px; color: var(--rust); white-space: nowrap; }
   .req-info { flex: 1; }
   .req-name { font-weight: 600; font-size: 14px; }
   .req-dept { font-size: 12px; color: var(--muted); margin-top: 2px; }
@@ -68,7 +68,7 @@
   .sub-h { font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.08em; color: var(--muted); margin-bottom: 7px; }
 
   .action-row { display: flex; gap: 10px; padding-top: 16px; border-top: 1px solid var(--border); align-items: center; }
-  .btn { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 12px; letter-spacing: 0.08em; text-transform: uppercase; padding: 10px 22px; border-radius: 4px; border: none; cursor: pointer; transition: all 0.18s; }
+  .btn { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 12px; letter-spacing: 0.08em; text-transform: uppercase; padding: 10px 22px; border-radius: 4px; border: none; cursor: pointer; transition: all 0.18s; }
   .btn-approve { background: var(--green); color: white; }
   .btn-approve:hover { background: #145234; }
   .btn-reject { background: transparent; color: var(--rust); border: 1.5px solid var(--rust); }
@@ -77,7 +77,7 @@
 
   .empty-state { text-align: center; padding: 80px 20px; }
   .empty-state .icon { font-size: 48px; margin-bottom: 16px; }
-  .empty-state h3 { font-family: 'Syne', sans-serif; font-weight: 800; font-size: 18px; margin-bottom: 8px; }
+  .empty-state h3 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 18px; margin-bottom: 8px; }
   .empty-state p { font-size: 14px; color: var(--muted); }
 
   @media(max-width:640px) {
