--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dashboard — QIU Digital Communications</title>
-<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root {
     --ink: #0f0e0d; --paper: #f0ede8; --white: #fff;
@@ -17,11 +17,11 @@
     --sidebar: #181614;
   }
   * { box-sizing: border-box; margin: 0; padding: 0; }
-  body { font-family: 'DM Sans', sans-serif; background: var(--paper); color: var(--ink); display: flex; min-height: 100vh; }
+  body { font-family: 'Poppins', sans-serif; background: var(--paper); color: var(--ink); display: flex; min-height: 100vh; }
 
   /* ── SIDEBAR ── */
   .sidebar { width: 224px; background: var(--sidebar); color: var(--paper); height: 100vh; position: fixed; left: 0; top: 0; display: flex; flex-direction: column; padding: 24px 0; z-index: 30; }
-  .sidebar .logo { font-family: 'Syne', sans-serif; font-weight: 800; font-size: 14px; letter-spacing: 0.1em; text-transform: uppercase; padding: 0 22px 22px; border-bottom: 1px solid rgba(255,255,255,0.06); }
+  .sidebar .logo { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 14px; letter-spacing: 0.1em; text-transform: uppercase; padding: 0 22px 22px; border-bottom: 1px solid rgba(255,255,255,0.06); }
   .sidebar .logo span { color: var(--gold); }
   .sidebar .logo small { display: block; font-size: 10px; font-weight: 400; color: rgba(255,255,255,0.3); letter-spacing: 0.08em; margin-top: 3px; }
   .sb-section { padding: 16px 0 0; }
@@ -39,9 +39,9 @@
   .main { margin-left: 224px; flex: 1; display: flex; flex-direction: column; min-height: 100vh; }
 
   .topbar { background: var(--white); border-bottom: 1px solid var(--border); height: 56px; padding: 0 32px; display: flex; align-items: center; justify-content: space-between; position: sticky; top: 0; z-index: 20; }
-  .topbar h1 { font-family: 'Syne', sans-serif; font-weight: 800; font-size: 18px; }
+  .topbar h1 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 18px; }
   .topbar-right { display: flex; align-items: center; gap: 10px; }
-  .btn { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 11px; letter-spacing: 0.09em; text-transform: uppercase; padding: 9px 20px; border-radius: 4px; border: none; cursor: pointer; transition: all 0.18s; text-decoration: none; display: inline-block; }
+  .btn { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 11px; letter-spacing: 0.09em; text-transform: uppercase; padding: 9px 20px; border-radius: 4px; border: none; cursor: pointer; transition: all 0.18s; text-decoration: none; display: inline-block; }
   .btn-primary { background: var(--rust); color: white; }
   .btn-primary:hover { background: #a93226; }
   .btn-ghost { background: transparent; border: 1px solid var(--border); color: var(--muted); }
@@ -60,7 +60,7 @@
   .stat.inprog::after { background: var(--indigo); }
   .stat.done::after { background: var(--gold); }
   .stat .s-label { font-size: 10px; font-weight: 500; text-transform: uppercase; letter-spacing: 0.1em; color: var(--muted); margin-bottom: 8px; }
-  .stat .s-num { font-family: 'Syne', sans-serif; font-weight: 800; font-size: 30px; line-height: 1; }
+  .stat .s-num { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 30px; line-height: 1; }
   .stat.all .s-num { color: var(--ink); }
   .stat.pending .s-num { color: var(--amber); }
   .stat.approved .s-num { color: var(--green); }
@@ -72,7 +72,7 @@
   .filter-pill { font-size: 12px; font-weight: 500; padding: 6px 14px; border-radius: 20px; border: 1px solid var(--border); background: var(--white); color: var(--muted); cursor: pointer; transition: all 0.15s; }
   .filter-pill:hover { border-color: var(--ink); color: var(--ink); }
   .filter-pill.on { background: var(--ink); color: white; border-color: var(--ink); }
-  .search { margin-left: auto; padding: 8px 14px; border: 1px solid var(--border); border-radius: 20px; font-size: 13px; font-family: 'DM Sans', sans-serif; background: var(--white); width: 200px; transition: border-color 0.2s; }
+  .search { margin-left: auto; padding: 8px 14px; border: 1px solid var(--border); border-radius: 20px; font-size: 13px; font-family: 'Poppins', sans-serif; background: var(--white); width: 200px; transition: border-color 0.2s; }
   .search:focus { outline: none; border-color: var(--rust); }
   .view-toggle { display: flex; border: 1px solid var(--border); border-radius: 4px; overflow: hidden; }
   .view-btn { padding: 7px 13px; font-size: 12px; background: var(--white); border: none; cursor: pointer; color: var(--muted); transition: all 0.15s; }
@@ -87,7 +87,7 @@
   tbody tr:last-child { border-bottom: none; }
   tbody tr:hover { background: #faf8f5; }
   td { padding: 13px 14px; font-size: 13px; vertical-align: middle; }
-  .td-ref { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 12px; color: var(--rust); white-space: nowrap; }
+  .td-ref { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 12px; color: var(--rust); white-space: nowrap; }
   .td-name .name { font-weight: 500; }
   .td-name .dept { font-size: 11px; color: var(--muted); margin-top: 1px; }
   .td-due.overdue { color: var(--rust); font-weight: 500; }
@@ -111,12 +111,12 @@
   .kanban { display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px; }
   .kanban-col { background: var(--white); border: 1px solid var(--border); border-radius: 8px; overflow: hidden; }
   .kanban-col-header { padding: 14px 16px; border-bottom: 1px solid var(--border); display: flex; align-items: center; justify-content: space-between; }
-  .kanban-col-title { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 11px; text-transform: uppercase; letter-spacing: 0.1em; }
+  .kanban-col-title { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 11px; text-transform: uppercase; letter-spacing: 0.1em; }
   .kanban-count { font-size: 11px; font-weight: 700; background: var(--paper); padding: 2px 8px; border-radius: 10px; color: var(--muted); }
   .kanban-cards { padding: 12px; display: flex; flex-direction: column; gap: 10px; min-height: 100px; }
   .k-card { background: var(--paper); border: 1px solid var(--border); border-radius: 6px; padding: 12px 13px; cursor: pointer; transition: all 0.16s; }
   .k-card:hover { border-color: var(--rust); box-shadow: 0 2px 8px rgba(0,0,0,0.06); }
-  .k-ref { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 11px; color: var(--rust); margin-bottom: 4px; }
+  .k-ref { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 11px; color: var(--rust); margin-bottom: 4px; }
   .k-title { font-size: 12px; font-weight: 500; line-height: 1.4; margin-bottom: 6px; }
   .k-meta { font-size: 11px; color: var(--muted); display: flex; align-items: center; justify-content: space-between; }
   .k-due { font-size: 10px; color: var(--muted); }
@@ -129,14 +129,14 @@
   .drawer.open { right: 0; }
 
   .drawer-top { padding: 22px 26px; background: var(--paper); border-bottom: 1px solid var(--border); display: flex; align-items: flex-start; justify-content: space-between; position: sticky; top: 0; z-index: 2; }
-  .drawer-ref { font-family: 'Syne', sans-serif; font-weight: 800; font-size: 16px; color: var(--rust); }
+  .drawer-ref { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 16px; color: var(--rust); }
   .drawer-sub { font-size: 12px; color: var(--muted); margin-top: 4px; }
   .close-btn { background: none; border: none; font-size: 24px; cursor: pointer; color: var(--muted); line-height: 1; padding: 0 4px; }
   .close-btn:hover { color: var(--ink); }
 
   .drawer-body { padding: 22px 26px; }
   .d-section { margin-bottom: 24px; }
-  .d-section-title { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 10px; letter-spacing: 0.15em; text-transform: uppercase; color: var(--muted); padding-bottom: 10px; border-bottom: 1px solid var(--border); margin-bottom: 14px; }
+  .d-section-title { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 10px; letter-spacing: 0.15em; text-transform: uppercase; color: var(--muted); padding-bottom: 10px; border-bottom: 1px solid var(--border); margin-bottom: 14px; }
   .info-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
   .info-item dt { font-size: 10px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.08em; color: var(--muted); margin-bottom: 3px; }
   .info-item dd { font-size: 13px; line-height: 1.5; }
@@ -146,11 +146,11 @@
   .assign-row { display: flex; align-items: center; gap: 10px; margin-bottom: 14px; }
   .assign-select {
     flex: 1; padding: 9px 12px; border: 1px solid var(--border); border-radius: 4px;
-    font-family: 'DM Sans', sans-serif; font-size: 13px; background: var(--white);
+    font-family: 'Poppins', sans-serif; font-size: 13px; background: var(--white);
     -webkit-appearance: none; appearance: none; cursor: pointer;
   }
   .assign-select:focus { outline: none; border-color: var(--rust); }
-  .assign-btn { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; padding: 9px 18px; background: var(--ink); color: white; border: none; border-radius: 4px; cursor: pointer; white-space: nowrap; transition: background 0.18s; }
+  .assign-btn { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; padding: 9px 18px; background: var(--ink); color: white; border: none; border-radius: 4px; cursor: pointer; white-space: nowrap; transition: background 0.18s; }
   .assign-btn:hover { background: #333; }
   .assigned-display { display: flex; align-items: center; gap: 8px; font-size: 13px; }
   .reassign-link { font-size: 12px; color: var(--muted); cursor: pointer; text-decoration: underline; margin-left: 6px; }
@@ -161,7 +161,7 @@
   .stage-btn {
     font-size: 11px; font-weight: 600; letter-spacing: 0.06em; text-transform: uppercase;
     padding: 7px 14px; border-radius: 4px; border: 1.5px solid transparent;
-    cursor: pointer; font-family: 'DM Sans', sans-serif; transition: all 0.15s;
+    cursor: pointer; font-family: 'Poppins', sans-serif; transition: all 0.15s;
   }
   .stage-btn:hover { opacity: 0.8; transform: translateY(-1px); }
   .stage-btn.cur { box-shadow: 0 0 0 2px currentColor; }
@@ -173,9 +173,9 @@
   .stage-btn[data-s="rejected"] { background: var(--rust-light); color: var(--rust); border-color: rgba(192,57,43,0.2); }
 
   /* NOTES */
-  .notes-input { width: 100%; padding: 10px 12px; border: 1px solid var(--border); border-radius: 4px; font-family: 'DM Sans', sans-serif; font-size: 13px; resize: vertical; min-height: 80px; margin-bottom: 10px; line-height: 1.6; }
+  .notes-input { width: 100%; padding: 10px 12px; border: 1px solid var(--border); border-radius: 4px; font-family: 'Poppins', sans-serif; font-size: 13px; resize: vertical; min-height: 80px; margin-bottom: 10px; line-height: 1.6; }
   .notes-input:focus { outline: none; border-color: var(--rust); }
-  .save-btn { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 11px; letter-spacing: 0.09em; text-transform: uppercase; padding: 9px 20px; background: var(--ink); color: white; border: none; border-radius: 4px; cursor: pointer; }
+  .save-btn { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 11px; letter-spacing: 0.09em; text-transform: uppercase; padding: 9px 20px; background: var(--ink); color: white; border: none; border-radius: 4px; cursor: pointer; }
   .save-btn:hover { background: #333; }
 
   /* TIMELINE */
@@ -190,7 +190,7 @@
   /* EMAIL LINK in drawer */
   .empty-row { text-align: center; padding: 60px 20px; }
   .empty-row .icon { font-size: 36px; margin-bottom: 12px; }
-  .empty-row h3 { font-family: 'Syne', sans-serif; font-weight: 700; font-size: 16px; margin-bottom: 6px; }
+  .empty-row h3 { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 16px; margin-bottom: 6px; }
   .empty-row p { font-size: 13px; color: var(--muted); }
 
   @media(max-width:900px) {
