--- a/my-requests.html
+++ b/my-requests.html
@@ -5,131 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Requests — QIU Digital Communications</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-<style>
-  :root {
-    --ink: #0f0e0d; --paper: #f5f2ee; --rust: #c0392b; --rust-light: #f5e8e6;
-    --gold: #c9a84c; --muted: #7a7570; --border: #d6d0c8; --white: #fff;
-    --amber: #b45309; --amber-light: #fef3c7;
-    --green: #1a6b45; --green-light: #eaf5ef;
-    --indigo: #3730a3; --indigo-light: #eef2ff;
-  }
-  * { box-sizing: border-box; margin: 0; padding: 0; }
-  body { font-family: 'Poppins', sans-serif; background: var(--paper); color: var(--ink); }
-
-  /* TOP BAR */
-  .topband { background: var(--ink); color: var(--paper); padding: 0 40px; display: flex; align-items: center; justify-content: space-between; height: 56px; position: sticky; top: 0; z-index: 20; }
-  .brand { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 13px; letter-spacing: 0.12em; text-transform: uppercase; }
-  .brand span { color: var(--gold); }
-  nav { display: flex; gap: 2px; }
-  nav a { color: rgba(255,255,255,0.55); text-decoration: none; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; padding: 7px 13px; border-radius: 3px; transition: all 0.18s; }
-  nav a:hover { color: var(--paper); background: rgba(255,255,255,0.07); }
-  nav a.active { color: var(--gold); background: rgba(201,168,76,0.1); }
-  .sso-badge { font-size: 11px; color: rgba(255,255,255,0.35); border: 1px solid rgba(255,255,255,0.1); padding: 4px 10px; border-radius: 20px; display: flex; align-items: center; gap: 6px; }
-  .sso-dot { width: 6px; height: 6px; background: #4ade80; border-radius: 50%; flex-shrink: 0; }
-
-  /* HERO */
-  .hero { padding: 44px 40px 36px; background: linear-gradient(135deg, #181614 0%, #2a231e 100%); color: var(--paper); position: relative; overflow: hidden; }
-  .hero::after { content: 'REQUESTS'; font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 110px; color: rgba(255,255,255,0.025); position: absolute; right: -10px; top: -10px; line-height: 1; pointer-events: none; }
-  .hero-tag { display: inline-block; font-size: 11px; font-weight: 500; letter-spacing: 0.15em; text-transform: uppercase; color: var(--gold); border: 1px solid rgba(201,168,76,0.35); padding: 4px 12px; border-radius: 2px; margin-bottom: 14px; }
-  .hero h1 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: clamp(22px,3.5vw,36px); margin-bottom: 8px; }
-  .hero p { font-size: 14px; font-weight: 300; opacity: 0.6; max-width: 480px; line-height: 1.7; }
-
-  /* EMAIL BANNER */
-  .email-banner { background: var(--indigo-light); border-left: 4px solid var(--indigo); margin: 24px 40px 0; padding: 13px 18px; font-size: 13px; color: var(--indigo); border-radius: 0 4px 4px 0; line-height: 1.6; }
-  .email-banner strong { display: block; margin-bottom: 2px; }
-
-  /* MAIN */
-  .main { max-width: 860px; margin: 0 auto; padding: 32px 40px 80px; }
-
-  /* EMPTY STATE */
-  .empty-state { text-align: center; padding: 72px 20px; }
-  .empty-icon { font-size: 48px; margin-bottom: 16px; opacity: 0.4; }
-  .empty-state h3 { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 18px; margin-bottom: 8px; color: var(--muted); }
-  .empty-state p { font-size: 14px; color: var(--muted); margin-bottom: 24px; line-height: 1.6; }
-  .btn { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 12px; letter-spacing: 0.1em; text-transform: uppercase; padding: 11px 26px; border-radius: 4px; border: none; cursor: pointer; transition: all 0.18s; text-decoration: none; display: inline-block; }
-  .btn-primary { background: var(--rust); color: var(--white); }
-  .btn-primary:hover { background: #a93226; transform: translateY(-1px); box-shadow: 0 4px 14px rgba(192,57,43,0.3); }
-
-  /* REQUEST CARDS */
-  .requests-list { display: flex; flex-direction: column; gap: 16px; }
-
-  .req-card { background: var(--white); border: 1px solid var(--border); border-radius: 8px; overflow: hidden; transition: box-shadow 0.18s; }
-  .req-card:hover { box-shadow: 0 4px 20px rgba(15,14,13,0.08); }
-
-  .req-header { padding: 18px 22px; display: flex; align-items: flex-start; justify-content: space-between; gap: 16px; cursor: pointer; }
-  .req-header-left { flex: 1; min-width: 0; }
-  .req-ref { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 13px; color: var(--rust); letter-spacing: 0.06em; margin-bottom: 4px; }
-  .req-title { font-weight: 600; font-size: 15px; margin-bottom: 6px; line-height: 1.3; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-  .req-meta { font-size: 12px; color: var(--muted); display: flex; gap: 14px; flex-wrap: wrap; }
-  .req-meta span { display: flex; align-items: center; gap: 4px; }
-
-  .req-header-right { display: flex; flex-direction: column; align-items: flex-end; gap: 8px; flex-shrink: 0; }
-  .status-badge { font-size: 11px; font-weight: 600; padding: 4px 10px; border-radius: 20px; white-space: nowrap; letter-spacing: 0.04em; }
-  .badge-pending { background: var(--amber-light); color: var(--amber); }
-  .badge-approved { background: var(--green-light); color: var(--green); }
-  .badge-in_progress { background: var(--indigo-light); color: var(--indigo); }
-  .badge-on_hold { background: #f0f0f0; color: #555; }
-  .badge-completed { background: var(--green-light); color: var(--green); }
-  .badge-rejected { background: var(--rust-light); color: var(--rust); }
-
-  .expand-icon { font-size: 13px; color: var(--muted); margin-top: 2px; transition: transform 0.2s; }
-  .req-card.open .expand-icon { transform: rotate(180deg); }
-
-  /* PROGRESS STEPPER */
-  .progress-wrap { padding: 0 22px 18px; border-bottom: 1px solid var(--border); }
-  .stepper { display: flex; align-items: flex-start; position: relative; }
-  .stepper::before { content: ''; position: absolute; top: 14px; left: 14px; right: 14px; height: 2px; background: var(--border); z-index: 0; }
-  .step { flex: 1; display: flex; flex-direction: column; align-items: center; gap: 8px; position: relative; z-index: 1; }
-  .step-dot { width: 28px; height: 28px; border-radius: 50%; border: 2px solid var(--border); background: var(--white); display: flex; align-items: center; justify-content: center; font-size: 11px; font-weight: 700; color: var(--muted); transition: all 0.2s; }
-  .step-dot.done { background: var(--green); border-color: var(--green); color: var(--white); }
-  .step-dot.active { background: var(--rust); border-color: var(--rust); color: var(--white); box-shadow: 0 0 0 4px rgba(192,57,43,0.15); }
-  .step-dot.hold { background: #999; border-color: #999; color: var(--white); }
-  .step-dot.rejected { background: var(--rust); border-color: var(--rust); color: var(--white); }
-  .step-label { font-size: 10px; font-weight: 600; text-align: center; color: var(--muted); text-transform: uppercase; letter-spacing: 0.06em; line-height: 1.3; max-width: 64px; }
-  .step-label.active-label { color: var(--ink); font-weight: 700; }
-
-  /* STATUS MESSAGE */
-  .status-msg { margin: 14px 22px 0; padding: 11px 14px; border-radius: 5px; font-size: 13px; line-height: 1.6; }
-  .msg-amber { background: var(--amber-light); color: var(--amber); border-left: 3px solid var(--amber); }
-  .msg-green { background: var(--green-light); color: var(--green); border-left: 3px solid var(--green); }
-  .msg-indigo { background: var(--indigo-light); color: var(--indigo); border-left: 3px solid var(--indigo); }
-  .msg-gray { background: #f0f0f0; color: #555; border-left: 3px solid #999; }
-  .msg-rust { background: var(--rust-light); color: var(--rust); border-left: 3px solid var(--rust); }
-
-  /* DETAIL PANEL */
-  .req-detail { display: none; padding: 20px 22px 22px; border-top: 1px solid var(--border); }
-  .req-card.open .req-detail { display: block; }
-
-  .detail-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px 24px; margin-bottom: 18px; }
-  .dl { display: flex; flex-direction: column; gap: 2px; }
-  dt { font-size: 10px; font-weight: 600; letter-spacing: 0.1em; text-transform: uppercase; color: var(--muted); }
-  dd { font-size: 13px; color: var(--ink); line-height: 1.5; }
-
-  .sub-heading { font-size: 10px; font-weight: 700; letter-spacing: 0.12em; text-transform: uppercase; color: var(--muted); margin-bottom: 8px; margin-top: 16px; }
-  .desc-block { font-size: 13px; line-height: 1.8; color: var(--ink); background: var(--paper); padding: 12px 14px; border-radius: 4px; border: 1px solid var(--border); }
-  .desc-block p { margin-bottom: 8px; }
-  .desc-block p:last-child { margin-bottom: 0; }
-  .desc-block ul, .desc-block ol { padding-left: 18px; }
-  .desc-block li { margin-bottom: 4px; }
-
-  .ref-link { font-size: 13px; color: var(--indigo); word-break: break-all; }
-  .ref-link a { color: var(--indigo); }
-
-  /* POC NOTICE */
-  .poc-notice { background: #f0f0f0; border-radius: 4px; padding: 10px 14px; font-size: 11px; color: var(--muted); line-height: 1.6; margin-top: 20px; }
-
-  @media(max-width:640px) {
-    .topband { padding: 0 20px; }
-    .hero, .main { padding-left: 20px; padding-right: 20px; }
-    .email-banner { margin-left: 20px; margin-right: 20px; }
-    .detail-grid { grid-template-columns: 1fr; }
-    .sso-badge { display: none; }
-    .req-meta { gap: 8px; }
-  }
-</style>
+<link rel="stylesheet" href="css/shared.css">
+<link rel="stylesheet" href="css/requests.css">
 </head>
 <body>
 
+<!-- ── NAVIGATION ── -->
 <div class="topband">
   <div class="brand">QIU <span>Digital Comms</span></div>
   <nav>
@@ -140,17 +21,21 @@
   <div class="sso-badge"><div class="sso-dot"></div>Google SSO</div>
 </div>
 
-<div class="hero">
+<!-- ── HERO ── -->
+<div class="hero hero-requests">
   <div class="hero-tag">Digital Communications — QIU</div>
   <h1>My Requests</h1>
   <p>Track the status of your submitted job requests. Updates are sent to your email as your request progresses.</p>
 </div>
 
+<!-- ── EMAIL BANNER ── -->
 <div class="email-banner">
   <strong>📧 Need to follow up or add information?</strong>
-  Reply to the acknowledgement email you received when you submitted your request. All communication about your request happens in that email thread — do not send a new email.
+  Reply to the acknowledgement email you received when you submitted your request.
+  All communication about your request happens in that email thread — do not send a new email.
 </div>
 
+<!-- ── MAIN CONTENT ── -->
 <div class="main" id="main">
   <div class="empty-state" id="emptyState" style="display:none">
     <div class="empty-icon">📋</div>
@@ -161,191 +46,8 @@
   <div class="requests-list" id="requestsList"></div>
 </div>
 
-<script>
-  const CAT_LABELS = {
-    printed: 'Printed Media', digital: 'Digital Media', website: 'Website',
-    event: 'Event Coverage', video: 'Video Production', other: 'Other'
-  };
-
-  const STEPS = [
-    { key: 'submitted',   label: 'Submitted' },
-    { key: 'hod',         label: 'HOD Approval' },
-    { key: 'in_progress', label: 'In Progress' },
-    { key: 'review',      label: 'Under Review' },
-    { key: 'completed',   label: 'Completed' }
-  ];
-
-  function statusToStep(status) {
-    const map = {
-      pending_approval: 1,
-      approved:         2,
-      in_progress:      3,
-      on_hold:          3,
-      completed:        5,
-      rejected:         1
-    };
-    return map[status] ?? 1;
-  }
-
-  function fmtDate(d) {
-    if (!d) return '—';
-    const dt = new Date(d + (d.length === 10 ? 'T00:00:00' : ''));
-    return dt.toLocaleDateString('en-MY', { day: 'numeric', month: 'short', year: 'numeric' });
-  }
-
-  function badgeClass(status) {
-    const map = {
-      pending_approval: 'badge-pending',
-      approved:         'badge-approved',
-      in_progress:      'badge-in_progress',
-      on_hold:          'badge-on_hold',
-      completed:        'badge-completed',
-      rejected:         'badge-rejected'
-    };
-    return map[status] || 'badge-pending';
-  }
-
-  function badgeLabel(status) {
-    const map = {
-      pending_approval: 'Awaiting HOD Approval',
-      approved:         'HOD Approved',
-      in_progress:      'In Progress',
-      on_hold:          'On Hold',
-      completed:        'Completed',
-      rejected:         'Not Approved'
-    };
-    return map[status] || status;
-  }
-
-  function statusMessage(status) {
-    const msgs = {
-      pending_approval: { cls: 'msg-amber', text: 'Your request is waiting for your HOD\'s endorsement. You will receive an email update once it is approved.' },
-      approved:         { cls: 'msg-green', text: 'Your HOD has endorsed this request. Our team has been notified and will begin work soon. You will receive an email when work starts.' },
-      in_progress:      { cls: 'msg-indigo', text: 'Our team is actively working on your request. If we need clarification, we will reach out via your request email thread.' },
-      on_hold:          { cls: 'msg-gray', text: 'Your request has been placed on hold. Our team will contact you via your request email thread with further details.' },
-      completed:        { cls: 'msg-green', text: 'Your project is complete! Please collect it from the Digital Communications office, or check your email for the file link.' },
-      rejected:         { cls: 'msg-rust', text: 'This request was not approved by your HOD. Please speak with your HOD directly for more information.' }
-    };
-    return msgs[status] || msgs.pending_approval;
-  }
-
-  function buildStepper(status) {
-    const activeIdx = statusToStep(status) - 1;
-    const isRejected = status === 'rejected';
-    const isOnHold = status === 'on_hold';
-
-    return `<div class="stepper">
-      ${STEPS.map((s, i) => {
-        let dotClass = '';
-        let labelClass = '';
-        let content = i + 1;
-
-        if (isRejected && i === 0) {
-          dotClass = 'rejected'; content = '✕'; labelClass = 'active-label';
-        } else if (isOnHold && i === activeIdx) {
-          dotClass = 'hold'; content = '⏸'; labelClass = 'active-label';
-        } else if (i < activeIdx) {
-          dotClass = 'done'; content = '✓';
-        } else if (i === activeIdx) {
-          dotClass = 'active'; labelClass = 'active-label';
-        }
-
-        return `<div class="step">
-          <div class="step-dot ${dotClass}">${content}</div>
-          <div class="step-label ${labelClass}">${s.label}</div>
-        </div>`;
-      }).join('')}
-    </div>`;
-  }
-
-  function buildCard(r) {
-    const catLabel = CAT_LABELS[r.category] || r.category;
-    const subtypeStr = r.subtypes?.length ? ` — ${r.subtypes.join(', ')}` : '';
-    const msg = statusMessage(r.status);
-
-    const descContent = r.description
-      ? `<div class="desc-block">${r.description}</div>`
-      : r.descriptionPlain
-        ? `<div class="desc-block">${r.descriptionPlain}</div>`
-        : '<div class="desc-block" style="color:var(--muted);font-style:italic">No description provided.</div>';
-
-    const refContent = r.references
-      ? `<div class="ref-link">📁 <a href="${r.references}" target="_blank" rel="noopener">${r.references}</a></div>`
-      : '<span style="color:var(--muted);font-size:13px">None provided</span>';
-
-    return `
-    <div class="req-card" id="card-${r.ref}">
-      <div class="req-header" onclick="toggleCard('${r.ref}')">
-        <div class="req-header-left">
-          <div class="req-ref">${r.ref}</div>
-          <div class="req-title">${catLabel}${subtypeStr}</div>
-          <div class="req-meta">
-            <span>👤 ${r.requestedBy}</span>
-            <span>🏢 ${r.department}</span>
-            <span>📅 Due ${fmtDate(r.dueDate)}</span>
-          </div>
-        </div>
-        <div class="req-header-right">
-          <span class="status-badge ${badgeClass(r.status)}">${badgeLabel(r.status)}</span>
-          <span class="expand-icon">▼</span>
-        </div>
-      </div>
-
-      <div class="progress-wrap">
-        ${buildStepper(r.status)}
-      </div>
-
-      <div class="status-msg ${msg.cls}">${msg.text}</div>
-
-      <div class="req-detail">
-        <div class="detail-grid">
-          <div class="dl"><dt>Reference</dt><dd>${r.ref}</dd></div>
-          <div class="dl"><dt>Submitted</dt><dd>${fmtDate(r.submittedAt)}</dd></div>
-          <div class="dl"><dt>Requested By</dt><dd>${r.requestedBy}</dd></div>
-          <div class="dl"><dt>Email</dt><dd>${r.email}</dd></div>
-          <div class="dl"><dt>Department</dt><dd>${r.department}</dd></div>
-          <div class="dl"><dt>Requested Date</dt><dd>${fmtDate(r.requestedDate)}</dd></div>
-          <div class="dl"><dt>Due Date</dt><dd>${fmtDate(r.dueDate)}</dd></div>
-          <div class="dl"><dt>Category</dt><dd>${catLabel}${subtypeStr}</dd></div>
-        </div>
-
-        <div class="sub-heading">Job Purpose</div>
-        <div class="desc-block">${r.jobPurpose || '—'}</div>
-
-        <div class="sub-heading">Project Description</div>
-        ${descContent}
-
-        <div class="sub-heading">Supporting Materials</div>
-        ${refContent}
-
-        <div class="poc-notice">
-          ℹ️ In production, this page will only show requests submitted by your account (filtered by Google SSO email). Demo mode shows all requests in this browser session.
-        </div>
-      </div>
-    </div>`;
-  }
-
-  function toggleCard(ref) {
-    const card = document.getElementById('card-' + ref);
-    card.classList.toggle('open');
-  }
-
-  function render() {
-    const all = JSON.parse(localStorage.getItem('qiu_requests') || '[]');
-    const listEl = document.getElementById('requestsList');
-    const emptyEl = document.getElementById('emptyState');
-
-    if (all.length === 0) {
-      emptyEl.style.display = 'block';
-      listEl.innerHTML = '';
-      return;
-    }
-
-    emptyEl.style.display = 'none';
-    listEl.innerHTML = all.map(buildCard).join('');
-  }
-
-  render();
-</script>
+<!-- ── SCRIPTS ── -->
+<script src="js/shared.js"></script>
+<script src="js/requests.js"></script>
 </body>
 </html>
