--- a/user-guide.html
+++ b/user-guide.html
@@ -5,121 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>User Guide — QIU Digital Communications</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-<style>
-  :root {
-    --ink: #0f0e0d; --paper: #f5f2ee; --white: #fff;
-    --rust: #c0392b; --rust-light: #fdf0ee;
-    --gold: #c9a84c; --muted: #7a7570; --border: #d6d0c8;
-    --green: #1a6b45; --green-light: #eaf5ef;
-    --amber: #b45309; --amber-light: #fef3c7;
-    --indigo: #3730a3; --indigo-light: #eef2ff;
-  }
-  * { box-sizing: border-box; margin: 0; padding: 0; }
-  body { font-family: 'Poppins', sans-serif; background: var(--paper); color: var(--ink); }
-
-  /* NAV */
-  .topband { background: var(--ink); color: var(--paper); padding: 0 40px; display: flex; align-items: center; justify-content: space-between; height: 56px; position: sticky; top: 0; z-index: 20; }
-  .brand { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 13px; letter-spacing: 0.12em; text-transform: uppercase; }
-  .brand span { color: var(--gold); }
-  nav { display: flex; gap: 2px; }
-  nav a { color: rgba(255,255,255,0.55); text-decoration: none; font-size: 11px; letter-spacing: 0.08em; text-transform: uppercase; padding: 7px 13px; border-radius: 3px; transition: all 0.18s; }
-  nav a:hover { color: var(--paper); background: rgba(255,255,255,0.07); }
-  nav a.active { color: var(--gold); background: rgba(201,168,76,0.1); }
-
-  /* HERO */
-  .hero { padding: 52px 40px 44px; background: linear-gradient(135deg, #181614 0%, #2a231e 100%); color: var(--paper); position: relative; overflow: hidden; }
-  .hero::after { content: 'GUIDE'; font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 130px; color: rgba(255,255,255,0.025); position: absolute; right: -10px; top: -10px; line-height: 1; pointer-events: none; }
-  .hero-tag { display: inline-block; font-size: 11px; font-weight: 500; letter-spacing: 0.15em; text-transform: uppercase; color: var(--gold); border: 1px solid rgba(201,168,76,0.35); padding: 4px 12px; border-radius: 2px; margin-bottom: 18px; }
-  .hero h1 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: clamp(24px,4vw,42px); margin-bottom: 12px; line-height: 1.1; }
-  .hero p { font-size: 15px; font-weight: 300; opacity: 0.65; max-width: 540px; line-height: 1.8; }
-
-  /* LAYOUT */
-  .guide-wrap { max-width: 780px; margin: 0 auto; padding: 48px 40px 100px; }
-
-  /* TOC */
-  .toc { background: var(--white); border: 1px solid var(--border); border-radius: 8px; padding: 24px 28px; margin-bottom: 48px; }
-  .toc h2 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 13px; letter-spacing: 0.12em; text-transform: uppercase; color: var(--muted); margin-bottom: 16px; }
-  .toc ol { padding-left: 20px; display: flex; flex-direction: column; gap: 8px; }
-  .toc li { font-size: 14px; }
-  .toc a { color: var(--rust); text-decoration: none; font-weight: 500; }
-  .toc a:hover { text-decoration: underline; }
-
-  /* SECTIONS */
-  .guide-section { margin-bottom: 56px; scroll-margin-top: 80px; }
-  .section-num { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 11px; letter-spacing: 0.15em; text-transform: uppercase; color: var(--rust); margin-bottom: 6px; display: block; }
-  .guide-section h2 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 22px; margin-bottom: 16px; padding-bottom: 14px; border-bottom: 2px solid var(--ink); }
-  .guide-section p { font-size: 15px; line-height: 1.8; margin-bottom: 14px; color: #2a2826; }
-  .guide-section p:last-child { margin-bottom: 0; }
-
-  /* STEPS */
-  .steps { display: flex; flex-direction: column; gap: 0; margin: 24px 0; }
-  .step { display: flex; gap: 20px; padding: 22px 0; border-bottom: 1px solid var(--border); }
-  .step:last-child { border-bottom: none; }
-  .step-num { width: 36px; height: 36px; border-radius: 50%; background: var(--ink); color: var(--white); font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 14px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; margin-top: 2px; }
-  .step-body { flex: 1; }
-  .step-title { font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 15px; margin-bottom: 8px; }
-  .step-desc { font-size: 14px; line-height: 1.8; color: #2a2826; }
-  .step-desc strong { color: var(--ink); }
-  .step-desc a { color: var(--rust); }
-
-  /* CALLOUTS */
-  .callout { border-radius: 6px; padding: 16px 20px; margin: 20px 0; font-size: 14px; line-height: 1.8; }
-  .callout-amber { background: var(--amber-light); border-left: 4px solid var(--amber); color: #7c4a0a; }
-  .callout-green { background: var(--green-light); border-left: 4px solid var(--green); color: #0f4a2a; }
-  .callout-rust { background: var(--rust-light); border-left: 4px solid var(--rust); color: #7a1f16; }
-  .callout-indigo { background: var(--indigo-light); border-left: 4px solid var(--indigo); color: #251f7a; }
-  .callout strong { display: block; margin-bottom: 4px; font-size: 12px; letter-spacing: 0.08em; text-transform: uppercase; }
-
-  /* CATEGORY TABLE */
-  .cat-table { width: 100%; border-collapse: collapse; margin: 20px 0; font-size: 14px; }
-  .cat-table th { background: var(--ink); color: var(--paper); text-align: left; padding: 10px 14px; font-family: 'Poppins', sans-serif; font-weight: 700; font-size: 11px; letter-spacing: 0.1em; text-transform: uppercase; }
-  .cat-table td { padding: 12px 14px; border-bottom: 1px solid var(--border); vertical-align: top; line-height: 1.6; }
-  .cat-table tr:nth-child(even) td { background: #faf8f5; }
-  .cat-table tr:last-child td { border-bottom: none; }
-  .cat-emoji { font-size: 16px; margin-right: 6px; }
-
-  /* STATUS FLOW */
-  .status-flow { display: flex; align-items: flex-start; gap: 0; margin: 24px 0; position: relative; }
-  .status-flow::before { content: ''; position: absolute; top: 18px; left: 18px; right: 18px; height: 2px; background: var(--border); z-index: 0; }
-  .status-step { flex: 1; display: flex; flex-direction: column; align-items: center; gap: 10px; position: relative; z-index: 1; }
-  .ss-dot { width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 14px; border: 2px solid var(--border); background: var(--white); }
-  .ss-dot.submitted { background: var(--ink); border-color: var(--ink); color: white; font-size: 12px; }
-  .ss-dot.hod { background: var(--amber); border-color: var(--amber); color: white; font-size: 12px; }
-  .ss-dot.working { background: var(--indigo); border-color: var(--indigo); color: white; font-size: 12px; }
-  .ss-dot.done { background: var(--green); border-color: var(--green); color: white; font-size: 12px; }
-  .ss-label { font-size: 11px; font-weight: 600; text-align: center; color: var(--muted); text-transform: uppercase; letter-spacing: 0.06em; line-height: 1.3; }
-  .ss-sublabel { font-size: 10px; color: var(--muted); text-align: center; line-height: 1.4; max-width: 70px; }
-
-  /* DO / DON'T */
-  .do-dont { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; margin: 20px 0; }
-  .do-box, .dont-box { border-radius: 6px; padding: 18px 20px; }
-  .do-box { background: var(--green-light); border: 1px solid rgba(26,107,69,0.15); }
-  .dont-box { background: var(--rust-light); border: 1px solid rgba(192,57,43,0.15); }
-  .do-box h4 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 12px; letter-spacing: 0.1em; text-transform: uppercase; color: var(--green); margin-bottom: 12px; }
-  .dont-box h4 { font-family: 'Poppins', sans-serif; font-weight: 800; font-size: 12px; letter-spacing: 0.1em; text-transform: uppercase; color: var(--rust); margin-bottom: 12px; }
-  .do-box li, .dont-box li { font-size: 13px; line-height: 1.7; margin-left: 16px; margin-bottom: 4px; }
-
-  /* FAQ */
-  .faq { display: flex; flex-direction: column; }
-  .faq-item { border-bottom: 1px solid var(--border); }
-  .faq-item:first-child { border-top: 1px solid var(--border); }
-  .faq-q { font-weight: 600; font-size: 15px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; gap: 12px; padding: 18px 0; }
-  .faq-q::after { content: '+'; font-size: 20px; color: var(--muted); flex-shrink: 0; transition: transform 0.2s; }
-  .faq-item.open .faq-q::after { transform: rotate(45deg); }
-  .faq-a { display: none; font-size: 14px; line-height: 1.8; color: #2a2826; padding-bottom: 18px; }
-  .faq-item.open .faq-a { display: block; }
-
-  @media(max-width:640px) {
-    .topband { padding: 0 20px; }
-    .hero, .guide-wrap { padding-left: 20px; padding-right: 20px; }
-    .do-dont { grid-template-columns: 1fr; }
-    .status-flow { gap: 4px; }
-    .ss-sublabel { display: none; }
-  }
-</style>
+<link rel="stylesheet" href="css/shared.css">
+<link rel="stylesheet" href="css/guide.css">
 </head>
 <body>
 
+<!-- ── NAVIGATION ── -->
 <div class="topband">
   <div class="brand">QIU <span>Digital Comms</span></div>
   <nav>
@@ -129,7 +20,8 @@
   </nav>
 </div>
 
-<div class="hero">
+<!-- ── HERO ── -->
+<div class="hero hero-guide">
   <div class="hero-tag">Digital Communications — QIU</div>
   <h1>How to Submit a Job Request</h1>
   <p>A step-by-step guide for QIU staff on how to use the Digital Communications Job Request system — from submitting your first request to tracking its progress.</p>
@@ -137,6 +29,7 @@
 
 <div class="guide-wrap">
 
+  <!-- TABLE OF CONTENTS -->
   <div class="toc">
     <h2>In This Guide</h2>
     <ol>
@@ -151,7 +44,7 @@
     </ol>
   </div>
 
-  <!-- SECTION 1 -->
+  <!-- ── SECTION 1 ── -->
   <div class="guide-section" id="s1">
     <span class="section-num">Section 1</span>
     <h2>What is the Job Request Form?</h2>
@@ -163,7 +56,7 @@
     </div>
   </div>
 
-  <!-- SECTION 2 -->
+  <!-- ── SECTION 2 ── -->
   <div class="guide-section" id="s2">
     <span class="section-num">Section 2</span>
     <h2>Before You Start</h2>
@@ -193,7 +86,7 @@
     </div>
   </div>
 
-  <!-- SECTION 3 -->
+  <!-- ── SECTION 3 ── -->
   <div class="guide-section" id="s3">
     <span class="section-num">Section 3</span>
     <h2>Step-by-Step: Submitting a Request</h2>
@@ -227,17 +120,37 @@
         <div class="step-num">4</div>
         <div class="step-body">
           <div class="step-title">Select your request category</div>
-          <div class="step-desc">Choose the category that best describes your request, then select the specific type from the options that appear below. If your request covers more than one type (e.g. a poster and a banner for the same event), select the primary one and describe the rest in the description field.</div>
+          <div class="step-desc">Choose the category that best describes your request, then select the specific type from the options that appear. If your request covers more than one type (e.g. a poster and a banner for the same event), select the primary one and describe the rest in the description field.</div>
           <br>
           <table class="cat-table">
-            <thead><tr><th>Category</th><th>What it covers</th></tr></thead>
+            <thead>
+              <tr><th>Category</th><th>What it covers</th></tr>
+            </thead>
             <tbody>
-              <tr><td><span class="cat-emoji">🖨️</span><strong>Printed Media</strong></td><td>Posters, banners, bunting, brochures, flyers, booklets, newsletters, signage, exhibition booths, logo design, merchandise, T-shirts</td></tr>
-              <tr><td><span class="cat-emoji">📱</span><strong>Digital Media</strong></td><td>Social media posts and campaigns, digital advertisements, email blast designs, digital backdrops, competition certificates</td></tr>
-              <tr><td><span class="cat-emoji">🌐</span><strong>Website</strong></td><td>Updates or amendments to existing pages, creating event pages (internal or external), adding new sections to the QIU website</td></tr>
-              <tr><td><span class="cat-emoji">📸</span><strong>Event Coverage</strong></td><td>Photography, videography, or both for your event. Also includes live streaming requests</td></tr>
-              <tr><td><span class="cat-emoji">🎬</span><strong>Video Production</strong></td><td>Promotional videos, social media reels, talk or webinar recordings, animation</td></tr>
-              <tr><td><span class="cat-emoji">✦</span><strong>Other</strong></td><td>Anything that does not fit the above categories</td></tr>
+              <tr>
+                <td><span class="cat-emoji">🖨️</span><strong>Printed Media</strong></td>
+                <td>Posters, banners, bunting, brochures, flyers, booklets, newsletters, signage, exhibition booths, logo design, merchandise, T-shirts</td>
+              </tr>
+              <tr>
+                <td><span class="cat-emoji">📱</span><strong>Digital Media</strong></td>
+                <td>Social media posts and campaigns, digital advertisements, email blast designs, digital backdrops, competition certificates</td>
+              </tr>
+              <tr>
+                <td><span class="cat-emoji">🌐</span><strong>Website</strong></td>
+                <td>Updates or amendments to existing pages, creating event pages (internal or external), adding new sections to the QIU website</td>
+              </tr>
+              <tr>
+                <td><span class="cat-emoji">📸</span><strong>Event Coverage</strong></td>
+                <td>Photography, videography, or both for your event. Also includes live streaming requests</td>
+              </tr>
+              <tr>
+                <td><span class="cat-emoji">🎬</span><strong>Video Production</strong></td>
+                <td>Promotional videos, social media reels, talk or webinar recordings, animation</td>
+              </tr>
+              <tr>
+                <td><span class="cat-emoji">✦</span><strong>Other</strong></td>
+                <td>Anything that does not fit the above categories</td>
+              </tr>
             </tbody>
           </table>
           <div class="callout callout-amber" style="margin-top:16px">
@@ -305,7 +218,7 @@
     </div>
   </div>
 
-  <!-- SECTION 4 -->
+  <!-- ── SECTION 4 ── -->
   <div class="guide-section" id="s4">
     <span class="section-num">Section 4</span>
     <h2>What Happens After You Submit</h2>
@@ -375,7 +288,7 @@
     </div>
   </div>
 
-  <!-- SECTION 5 -->
+  <!-- ── SECTION 5 ── -->
   <div class="guide-section" id="s5">
     <span class="section-num">Section 5</span>
     <h2>Tracking Your Request</h2>
@@ -395,7 +308,7 @@
     </div>
   </div>
 
-  <!-- SECTION 6 -->
+  <!-- ── SECTION 6 ── -->
   <div class="guide-section" id="s6">
     <span class="section-num">Section 6</span>
     <h2>How to Communicate With Our Team</h2>
@@ -422,7 +335,7 @@
     </div>
   </div>
 
-  <!-- SECTION 7 -->
+  <!-- ── SECTION 7 ── -->
   <div class="guide-section" id="s7">
     <span class="section-num">Section 7</span>
     <h2>Sharing Supporting Materials</h2>
@@ -456,7 +369,7 @@
     </div>
   </div>
 
-  <!-- SECTION 8 -->
+  <!-- ── SECTION 8 ── -->
   <div class="guide-section" id="s8">
     <span class="section-num">Section 8</span>
     <h2>Frequently Asked Questions</h2>
@@ -507,13 +420,7 @@
 
 </div>
 
-<script>
-  function toggleFaq(el) {
-    var item = el.closest('.faq-item');
-    var isOpen = item.classList.contains('open');
-    document.querySelectorAll('.faq-item').forEach(function(i) { i.classList.remove('open'); });
-    if (!isOpen) { item.classList.add('open'); }
-  }
-</script>
+<!-- ── SCRIPTS ── -->
+<script src="js/guide.js"></script>
 </body>
 </html>
